Ozhaev Zaynudin Sharik5.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:32:21: error: expected ';' at end of member declaration
     COLORREF Color, COLORREF FillColor;
                     ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:32:21: error: declaration of 'COLORREF Ball::COLORREF' [-fpermissive]
In file included from c:\users\zainu\desktop\курс\codeblocks\mingw\include\windows.h:48:0,
                 from C:\Users\zainu\Desktop\курс\TX\TXLib.h:873,
                 from c:\users\zainu\desktop\курс\codeblocks\mingw\include\txlib.h:1,
                 from C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:1:
c:\users\zainu\desktop\курс\codeblocks\mingw\include\windef.h:304:15: error: changes meaning of 'COLORREF' from 'typedef DWORD COLORREF' [-fpermissive]
 typedef DWORD COLORREF;
               ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:32:30: error: 'FillColor' does not name a type
     COLORREF Color, COLORREF FillColor;
                              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:33:5: error: expected ';' after struct definition
     }
     ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:65:18: error: 'ball1' was not declared in this scope
         DrowBall(ball1);
                  ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:70:22: error: 'x1' was not declared in this scope
         PhysicsBall(&x1, &y1, &vx1, &vy1, dt, r1);
                      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:70:32: error: 'vx1' was not declared in this scope
         PhysicsBall(&x1, &y1, &vx1, &vy1, dt, r1);
                                ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:70:38: error: 'vy1' was not declared in this scope
         PhysicsBall(&x1, &y1, &vx1, &vy1, dt, r1);
                                      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:70:47: error: 'r1' was not declared in this scope
         PhysicsBall(&x1, &y1, &vx1, &vy1, dt, r1);
                                               ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:41:10: warning: unused variable 'bal1' [-Wunused-variable]
     Ball bal1 = { rand() % W,  rand() % H,
          ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp: In function 'void Physics2Ball(int*, int*, int*, int*, int*, int*, int*, int*, int*, int*, int)':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:174:28: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
             float Dx = *x1 - *x2; // стороны треугольника
                            ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:175:28: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
             float Dy = *y1 - *y2; // стороны треугольника
                            ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:176:41: warning: conversion to 'float' from 'double' may alter its value [-Wconversion]
             float d = sqrt(Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; //гипотенуза
                                         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:176:53: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
             float d = sqrt(Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; //гипотенуза
                                                     ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:176:58: warning: conversion to 'float' alters 'double' constant value [-Wconversion]
             float d = sqrt(Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; //гипотенуза
                                                          ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:182:34: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
                 float Vn1 = *vx2*sin + *vy2*cos; //поворот системы координат шар1
                                  ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:182:45: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
                 float Vn1 = *vx2*sin + *vy2*cos; //поворот системы координат шар1
                                             ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:183:34: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
                 float Vn2 = *vx1*sin + *vy1*cos; //поворот системы координат шар2
                                  ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:183:45: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
                 float Vn2 = *vx1*sin + *vy1*cos; //поворот системы координат шар2
                                             ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:184:35: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
                 float Vt1 = -*vx2*cos + *vy2*sin; //поворот системы координат шар1
                                   ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:184:46: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
                 float Vt1 = -*vx2*cos + *vy2*sin; //поворот системы координат шар1
                                              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:185:35: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
                 float Vt2 = -*vx1*cos + *vy1*sin; //поворот системы координат шар2
                                   ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:185:46: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
                 float Vt2 = -*vx1*cos + *vy1*sin; //поворот системы координат шар2
                                              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:191:32: warning: conversion to 'int' from 'float' may alter its value [-Wconversion]
                 *vx1 = Vn2*sin - Vt2*cos; //обратный поворот системы координат шар1
                                ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:192:32: warning: conversion to 'int' from 'float' may alter its value [-Wconversion]
                 *vy1 = Vn2*cos + Vt2*sin; //обратный поворот системы координат шар1
                                ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:193:32: warning: conversion to 'int' from 'float' may alter its value [-Wconversion]
                 *vx2 = Vn1*sin - Vt1*cos; //обратный поворот системы координат шар2
                                ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:194:32: warning: conversion to 'int' from 'float' may alter its value [-Wconversion]
                 *vy2 = Vn1*cos + Vt1*sin; //обратный поворот системы координат шар2
                                ^
---------------------------------------------------------------------------------------------
[11.06.2021  7:21:56,60 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\proekt2> g++.exe "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp" -o "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
